# clerk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.gpu.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/clerk/: cli.py  transcribe.py
src/meeting_pipeline/: audio.py  cli.py  pipeline.py  summarize.py  transcribe.py
tests/: test_audio.py  test_cli.py  test_pipeline.py  test_summarize.py  test_transcribe.py
